[gd_scene load_steps=23 format=3 uid="uid://oml8g8p4fg5a"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_q7uc3"]
[ext_resource type="Script" path="res://scripts/page_design.gd" id="2_v1es3"]
[ext_resource type="PackedScene" uid="uid://c0kpplq51ul0y" path="res://scenes/buy_stock_page.tscn" id="5_cla2e"]
[ext_resource type="FontFile" uid="uid://b3yf1mraxth7i" path="res://assets/font/regular.otf" id="7_ujuhm"]
[ext_resource type="PackedScene" uid="uid://bhtb7ekm1lmd0" path="res://scenes/stocklines.tscn" id="9_nc0io"]
[ext_resource type="Texture2D" uid="uid://dt085ogfe3qy0" path="res://assets/models/stocks/leaderboard.png" id="11_ayx0j"]
[ext_resource type="Texture2D" uid="uid://xjotgsr4i2ht" path="res://assets/models/stocks/buy_menu.jpg" id="12_kcuuj"]
[ext_resource type="PackedScene" uid="uid://lmwb73u4iqij" path="res://scenes/stock_homepage.tscn" id="14_l0jcr"]
[ext_resource type="PackedScene" uid="uid://srvgomeq4a8v" path="res://scenes/leaderboard_page.tscn" id="20_qbwai"]
[ext_resource type="Script" path="res://scripts/leaderboard.gd" id="21_g1ufi"]
[ext_resource type="PackedScene" uid="uid://dvec5nk3pk0ia" path="res://scenes/main_menu.tscn" id="26_ovlpy"]
[ext_resource type="Script" path="res://scenes/EXIT.gd" id="27_0nk2n"]

[sub_resource type="LabelSettings" id="LabelSettings_t773c"]
font = ExtResource("7_ujuhm")

[sub_resource type="LabelSettings" id="LabelSettings_5kpln"]
font_size = 10
font_color = Color(0.662745, 0.662745, 0.662745, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ysexq"]
font_size = 22

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x77l2"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2ky5h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r8uo2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0vq6u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7dmue"]

[sub_resource type="LabelSettings" id="LabelSettings_6gtfr"]
font_size = 52

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v7ftv"]
bg_color = Color(0.337255, 0.662745, 0.207843, 1)

[node name="main" type="Node2D"]
script = ExtResource("1_q7uc3")

[node name="stock-app" type="CanvasLayer" parent="."]
script = ExtResource("2_v1es3")

[node name="stock_homepage" parent="stock-app" instance=ExtResource("14_l0jcr")]
visible = false

[node name="leaderboard_page" parent="stock-app" instance=ExtResource("20_qbwai")]
visible = false

[node name="BUY_STOCK_PAGE" parent="stock-app" instance=ExtResource("5_cla2e")]
visible = false

[node name="Money" type="Label" parent="stock-app"]
visible = false
offset_left = 2.0
offset_top = 63.0
offset_right = 139.0
offset_bottom = 90.0
text = "$10,000"
label_settings = SubResource("LabelSettings_t773c")

[node name="Money_total" type="Label" parent="stock-app"]
visible = false
offset_left = 2.0
offset_top = 51.0
offset_right = 119.0
offset_bottom = 77.0
text = "MONEY TOTAL:"
label_settings = SubResource("LabelSettings_5kpln")

[node name="day_Counter" type="Label" parent="stock-app"]
visible = false
offset_left = 1.0
offset_top = 553.0
offset_right = 140.0
offset_bottom = 611.0
text = "DAY: 1
"
label_settings = SubResource("LabelSettings_ysexq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="leaderboard" type="TextureButton" parent="stock-app"]
visible = false
offset_left = 33.0
offset_top = 248.0
offset_right = 257.0
offset_bottom = 456.0
scale = Vector2(0.3, 0.3)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("11_ayx0j")
script = ExtResource("21_g1ufi")

[node name="Control2" parent="stock-app" instance=ExtResource("9_nc0io")]

[node name="main_menu" parent="stock-app" instance=ExtResource("26_ovlpy")]

[node name="stock_timer" type="Timer" parent="stock-app"]
wait_time = 10.0
autostart = true

[node name="EXIT" type="Button" parent="stock-app"]
visible = false
offset_top = 600.0
offset_right = 138.0
offset_bottom = 652.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_x77l2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_2ky5h")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_r8uo2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0vq6u")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7dmue")
text = "EXIT"
script = ExtResource("27_0nk2n")

[node name="end_screen" type="Sprite2D" parent="stock-app/EXIT"]
visible = false
position = Vector2(586, -276)
scale = Vector2(0.394792, 0.433854)
texture = ExtResource("12_kcuuj")

[node name="total" type="Label" parent="stock-app/EXIT/end_screen"]
offset_left = -770.0
offset_top = -127.0
offset_right = -661.0
offset_bottom = -67.0
text = "Total: "
label_settings = SubResource("LabelSettings_6gtfr")
vertical_alignment = 1

[node name="final_message" type="Label" parent="stock-app/EXIT/end_screen"]
offset_left = -902.0
offset_top = -360.0
offset_right = 894.0
offset_bottom = -233.0
text = "Congratulations!"
label_settings = SubResource("LabelSettings_6gtfr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="total_amount" type="Label" parent="stock-app/EXIT/end_screen"]
offset_left = -187.0
offset_top = -127.0
offset_right = 821.0
offset_bottom = -36.0
text = "$123789.76"
label_settings = SubResource("LabelSettings_6gtfr")
horizontal_alignment = 2
vertical_alignment = 1

[node name="profit_per_day_amount" type="Label" parent="stock-app/EXIT/end_screen"]
offset_left = -187.0
offset_top = -25.583
offset_right = 821.0
offset_bottom = 65.417
text = "$346.57"
label_settings = SubResource("LabelSettings_6gtfr")
horizontal_alignment = 2
vertical_alignment = 1

[node name="profit_per_day" type="Label" parent="stock-app/EXIT/end_screen"]
offset_left = -770.0
offset_top = -25.5835
offset_right = -409.0
offset_bottom = 49.4165
text = "Profit Per Day:"
label_settings = SubResource("LabelSettings_6gtfr")
vertical_alignment = 1

[node name="username" type="TextEdit" parent="stock-app/EXIT/end_screen"]
offset_left = -775.093
offset_top = 99.1116
offset_right = 832.907
offset_bottom = 184.112
theme_override_colors/background_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
placeholder_text = "Username"

[node name="enter" type="Button" parent="stock-app/EXIT/end_screen"]
offset_left = -778.0
offset_top = 180.0
offset_right = 838.0
offset_bottom = 249.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_v7ftv")
text = "Enter"

[node name="exit_menu1" type="TextureButton" parent="stock-app/EXIT/end_screen"]
offset_left = -1482.0
offset_top = -749.0
offset_right = -902.0
offset_bottom = 749.0

[node name="exit_menu2" type="TextureButton" parent="stock-app/EXIT/end_screen"]
offset_left = -1482.0
offset_top = -749.0
offset_right = 1426.0
offset_bottom = -366.0

[node name="exit_menu3" type="TextureButton" parent="stock-app/EXIT/end_screen"]
offset_left = 899.0
offset_top = -749.0
offset_right = 1426.0
offset_bottom = 740.0

[node name="exit_menu4" type="TextureButton" parent="stock-app/EXIT/end_screen"]
offset_left = -1477.0
offset_top = 378.0
offset_right = 1426.0
offset_bottom = 740.0

[node name="error_label" type="Label" parent="stock-app/EXIT/end_screen"]
visible = false
offset_left = -780.0
offset_top = 295.0
offset_right = 828.0
offset_bottom = 343.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Must Be Between 3 and 12 Characters"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="stock-app/EXIT/end_screen/error_label"]
wait_time = 1.5

[node name="error_label2" type="Label" parent="stock-app/EXIT/end_screen"]
visible = false
offset_left = -780.0
offset_top = 295.0
offset_right = 828.0
offset_bottom = 343.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "No Spaces Permitted"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="stock-app/EXIT/end_screen/error_label2"]
wait_time = 1.5

[connection signal="pressed" from="stock-app/leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="timeout" from="stock-app/stock_timer" to="." method="_on_stock_timer_timeout"]
[connection signal="pressed" from="stock-app/EXIT" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="stock-app/EXIT/end_screen/enter" to="." method="_on_enter_pressed"]
[connection signal="pressed" from="stock-app/EXIT/end_screen/exit_menu1" to="." method="_on_exit_menu_1_pressed"]
[connection signal="pressed" from="stock-app/EXIT/end_screen/exit_menu2" to="." method="_on_exit_menu_1_pressed"]
[connection signal="pressed" from="stock-app/EXIT/end_screen/exit_menu3" to="." method="_on_exit_menu_1_pressed"]
[connection signal="pressed" from="stock-app/EXIT/end_screen/exit_menu4" to="." method="_on_exit_menu_1_pressed"]
[connection signal="timeout" from="stock-app/EXIT/end_screen/error_label/Timer" to="stock-app/EXIT" method="_on_timer_timeout"]
[connection signal="timeout" from="stock-app/EXIT/end_screen/error_label2/Timer" to="stock-app/EXIT" method="_on_timer_timeout"]
